[package]
name = "set_builder"
version = "5.0.1"
edition = "2021"
description = "A procedural macro to create Iterators over a set defined by Haskell-inspired set-builder notation."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Vonr/set_builder"
repository = "https://github.com/Vonr/set_builder"
keywords = ["set", "haskell", "proc-macro", "macro"]
include = ["src/**/*", "README.md"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"

[dev-dependencies]
trybuild = "1.0"
